--- a/Anabasis.Exporter/Anabasis.Exporter/Anabasis.Exporter.csproj
+++ b/Anabasis.Exporter/Anabasis.Exporter/Anabasis.Exporter.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.7.1" />
 
   </ItemGroup>
 
