--- a/Anabasis.Exporter/Anabasis.Exporter/Anabasis.Exporter.csproj
+++ b/Anabasis.Exporter/Anabasis.Exporter/Anabasis.Exporter.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.30" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Polly" Version="7.2.1" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
@@ -17,15 +18,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
     <ProjectReference Include="..\Anabasis.Importer\Anabasis.Importer.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="documents\childList.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="documents\document.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
