--- a/Anabasis.Exporter/Anabasis.EventStore/Anabasis.EventStore.csproj
+++ b/Anabasis.Exporter/Anabasis.EventStore/Anabasis.EventStore.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Scrutor" Version="3.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Infrastructure\Queue\PersistentQueue\" />
+  </ItemGroup>
+
 </Project>
