duck taping everything 2

--- a/Anabasis.Exporter/Anabasis.Exporter.Tests/Anabasis.Tests.csproj
+++ b/Anabasis.Exporter/Anabasis.Exporter.Tests/Anabasis.Tests.csproj
@@ -19,10 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
-    <ProjectReference Include="..\Anabasis.EventStore\Anabasis.EventStore.csproj" />
-    <ProjectReference Include="..\Anabasis.Exporter\Anabasis.Exporter.csproj" />
-    <ProjectReference Include="..\Anabasis.Importer\Anabasis.Importer.csproj" />
+    <ProjectReference Include="..\Anabasis.Actor\Anabasis.Actor.csproj" />
   </ItemGroup>
 
   <ItemGroup>
