--- a/Anabasis.Exporter/Anabasis.Actor/Anabasis.Actor.csproj
+++ b/Anabasis.Exporter/Anabasis.Actor/Anabasis.Actor.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Lamar" Version="5.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Anabasis.EventStore\Anabasis.EventStore.csproj" />
   </ItemGroup>
 
