porting old framework

--- a/Anabasis.Exporter/Anabasis.App/Anabasis.App.csproj
+++ b/Anabasis.Exporter/Anabasis.App/Anabasis.App.csproj
@@ -6,9 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
-    <ProjectReference Include="..\Anabasis.Exporter\Anabasis.Exporter.csproj" />
-    <ProjectReference Include="..\Anabasis.Importer\Anabasis.Importer.csproj" />
+    <ProjectReference Include="..\Anabasis.Actor.Exporter\Anabasis.Actor.Exporter.csproj" />
   </ItemGroup>
 
   <ItemGroup>
