--- a/Anabasis.Exporter/Anabasis.Exporter.Tests/Anabasis.Tests.csproj
+++ b/Anabasis.Exporter/Anabasis.Exporter.Tests/Anabasis.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -36,6 +36,11 @@
 
   <ItemGroup>
     <Content Remove="C:\Users\thoma\.nuget\packages\eventstore.client.embedded\20.6.0\build\..\runtimes\win-x64\native\js1.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="POC\Ex1\" />
+    <Folder Include="POC\Ex2\" />
   </ItemGroup>
 
 
