--- a/Anabasis.Exporter/Anabasis.EventStore/Anabasis.EventStore.csproj
+++ b/Anabasis.Exporter/Anabasis.EventStore/Anabasis.EventStore.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Scrutor" Version="3.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Projection\" />
+  </ItemGroup>
+
 </Project>
