--- a/Anabasis.Exporter/Anabasis.Exporter.Tests/Anabasis.Tests.csproj
+++ b/Anabasis.Exporter/Anabasis.Exporter.Tests/Anabasis.Tests.csproj
@@ -58,6 +58,9 @@
     <None Update="Integration\docker-compose.yaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Projections\testProjection.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 
