--- a/Anabasis.Exporter/Anabasis.Exporter.Tests/Anabasis.Tests.csproj
+++ b/Anabasis.Exporter/Anabasis.Exporter.Tests/Anabasis.Tests.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="DynamicData" Version="7.1.1" />
     <PackageReference Include="EventStore.Client" Version="21.2.0" />
     <PackageReference Include="EventStore.Client.Embedded" Version="20.6.0" />
+    <PackageReference Include="EventStore.Client.Grpc.ProjectionManagement" Version="21.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.4" />
     <PackageReference Include="morelinq" Version="3.3.2" />
