--- a/Anabasis.EventStore.Demo/Anabasis.EventStore.Demo.csproj
+++ b/Anabasis.EventStore.Demo/Anabasis.EventStore.Demo.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>Exe</OutputType>
     <StartupObject>Anabasis.EventStore.Demo.Program</StartupObject>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
