--- a/Anabasis.EventStore.Integration.Tests/Anabasis.EventStore.Integration.Tests.csproj
+++ b/Anabasis.EventStore.Integration.Tests/Anabasis.EventStore.Integration.Tests.csproj
@@ -1,10 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Platforms>AnyCPU</Platforms>
     <LangVersion>Latest</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="docker-compose.yaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="DynamicData" Version="7.1.1" />
@@ -40,11 +45,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="POC\Ex1\" />
-    <Folder Include="POC\Ex2\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Anabasis.EventStore\Anabasis.EventStore.csproj" />
   </ItemGroup>
 
@@ -53,6 +53,5 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-
 
 </Project>
