--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,15 +7,26 @@ build_script:
 - cmd: dotnet msbuild /restore  /p:Configuration=Release /p:version=%APPVEYOR_BUILD_VERSION% -verbosity:minimal Anabasis.EventStore.sln
 after_test:
 - cmd: appveyor PushArtifact %APPVEYOR_BUILD_FOLDER%\Anabasis.EventStore\bin\Release\Anabasis.EventStore.%APPVEYOR_BUILD_VERSION%.nupkg
-test: one
+test: off
 test_script:
 - cmd: |
     cd %APPVEYOR_BUILD_FOLDER%
     dotnet test Anabasis.EventStore.Tests\Anabasis.EventStore.Tests.csproj --configuration Release --no-build --no-restore
+# test:
+#   assemblies:
+#     only:
+#       - '**\*.Tests.dll'
+#   categories:
+#     except:
+#       - Integration
+#test_script:
+#- cmd: |
+#    cd %APPVEYOR_BUILD_FOLDER%
+#    dotnet test Anabasis.EventStore.Tests\Anabasis.EventStore.Tests.csproj --configuration Release --no-build --no-restore
 deploy:
   provider: NuGet
   api_key:
-    secure: lO5Q3lN0h5a98FiC/zqpN7yXeRjIzgWX1/74ccim/C0/Tixy6yL0jPEjWAaI5pHN
+    secure: EiB9bY27/kv2Wa+FOatlOR0qprehwxhwbRKb+2Oj5E3br2U+k5jNAd9ACqUEgAdB
   skip_symbols: false
   artifact: /.*\.nupkg/
   on:
