--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,9 @@
 version: 1.0.{build}
 image: Visual Studio 2019
 configuration: Release
+branches:
+  only:
+    - master
 nuget:
   disable_publish_on_pr: true
 build_script:
