--- a/Anabasis.EventStore.Demo.AspNet/Anabasis.EventStore.Demo.AspNet.csproj
+++ b/Anabasis.EventStore.Demo.AspNet/Anabasis.EventStore.Demo.AspNet.csproj
@@ -5,4 +5,17 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Carter" Version="5.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Anabasis.EventStore.Demo\Anabasis.EventStore.Demo.csproj" />
+    <ProjectReference Include="..\Anabasis.EventStore\Anabasis.EventStore.csproj" />
+  </ItemGroup>
+
+
 </Project>
