--- a/Anabasis.EventStore/Anabasis - Backup.EventStore.csproj
+++ b/Anabasis.EventStore/Anabasis - Backup.EventStore.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
     <LangVersion>Latest</LangVersion>
     <Platforms>AnyCPU;x64</Platforms>
     <PackageProjectUrl>https://github.com/thomasraynal/Anabasis.EventStore</PackageProjectUrl>
@@ -17,6 +17,9 @@
     <PackageReference Include="EventStore.Client" Version="20.10.0" />
     <PackageReference Include="EventStore.Client.Embedded" Version="20.6.0" />
     <PackageReference Include="EventStore.Client.Grpc.ProjectionManagement" Version="21.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.10" />
+    <PackageReference Include="Lamar" Version="6.0.0" />
     <PackageReference Include="morelinq" Version="3.3.2" />
   </ItemGroup>
 
