--- a/Anabasis.EventStore.Snapshot.InMemory/Anabasis.EventStore.Snapshot.InMemory.csproj
+++ b/Anabasis.EventStore.Snapshot.InMemory/Anabasis.EventStore.Snapshot.InMemory.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFramework>net5.0</TargetFramework>
     <LangVersion>Latest</LangVersion>
     <Platforms>AnyCPU;x64</Platforms>
     <PackageProjectUrl>https://github.com/thomasraynal/Anabasis.EventStore</PackageProjectUrl>
@@ -11,16 +12,14 @@
     <Product />
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Anabasis.EventStore\Anabasis.EventStore.csproj" />
+  </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="DynamicData" Version="7.3.1" />
-    <PackageReference Include="EventStore.Client" Version="20.10.0" />
-    <PackageReference Include="EventStore.Client.Embedded" Version="20.6.0" />
-    <PackageReference Include="EventStore.Client.Grpc.ProjectionManagement" Version="21.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.10" />
-    <PackageReference Include="Lamar" Version="6.0.0" />
-    <PackageReference Include="morelinq" Version="3.3.2" />
   </ItemGroup>
 
 </Project>
