--- a/Anabasis.Api/Anabasis.Api.csproj
+++ b/Anabasis.Api/Anabasis.Api.csproj
@@ -3,6 +3,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,9 +13,7 @@
 
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="PostSharp.Patterns.Caching" Version="6.9.12" />
     <PackageReference Include="Sentry.Serilog" Version="3.11.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
@@ -24,14 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Handler\" />
     <Folder Include="Shared\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="config.app.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Update="config.group.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
