--- a/Anabasis.EventStore.Snapshot.InMemory/Anabasis.EventStore.Snapshot.InMemory.csproj
+++ b/Anabasis.EventStore.Snapshot.InMemory/Anabasis.EventStore.Snapshot.InMemory.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
     <ProjectReference Include="..\Anabasis.EventStore\Anabasis.EventStore.csproj" />
   </ItemGroup>
   
