--- a/Anabasis.EventStore/Anabasis.EventStore.csproj
+++ b/Anabasis.EventStore/Anabasis.EventStore.csproj
@@ -19,5 +19,13 @@
     <PackageReference Include="EventStore.Client.Grpc.ProjectionManagement" Version="21.2.0" />
     <PackageReference Include="morelinq" Version="3.3.2" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Serialization\" />
+  </ItemGroup>
 
 </Project>
