--- a/Anabasis.RabbitMQ.Tests.Integration/docker-compose.yaml
+++ b/Anabasis.RabbitMQ.Tests.Integration/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       - RABBITMQ_SECURE_PASSWORD=yes
       - RABBITMQ_USERNAME=username
       - RABBITMQ_PASSWORD=password
+      - RABBITMQ_PLUGINS= rabbitmq_delayed_message_exchange;rabbitmq_management
+      - RABBITMQ_COMMUNITY_PLUGINS= https://github.com/rabbitmq/rabbitmq-delayed-message-exchange/releases/download/3.9.0/rabbitmq_delayed_message_exchange-3.9.0.ez
     volumes:
       - 'rabbitmq_data:/bitnami/rabbitmq/mnesia'
 volumes:
