--- a/Anabasis.RabbitMQ/Anabasis.RabbitMQ.csproj
+++ b/Anabasis.RabbitMQ/Anabasis.RabbitMQ.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Anabasis.Common\Anabasis.Common.csproj" />
+  </ItemGroup>
+
 </Project>
