--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ environment:
   - SOLUTION_NAME: Anabasis.EventStore
   - SOLUTION_NAME: Anabasis.EventStore.Standalone
   - SOLUTION_NAME: Anabasis.EventStore.Snapshot.InMemory
+  - SOLUTION_NAME: Anabasis.RabbitMQ
 branches:
   only:
     - master
