--- a/Anabasis.EntityFramework.Tests.Integration/Anabasis.EntityFramework.Tests.Integration.csproj
+++ b/Anabasis.EntityFramework.Tests.Integration/Anabasis.EntityFramework.Tests.Integration.csproj
@@ -1,17 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Anabasis.EnityFramework\Anabasis.EntityFramework.csproj" />
+    <ProjectReference Include="..\Anabasis.EntityFramework\Anabasis.EntityFramework.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="docker-compose.yaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.12" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
+    <PackageReference Include="NUnit" Version="3.13.1" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+
   </ItemGroup>
 
 </Project>
