--- a/Anabasis.EntityFramework.Tests.Integration/docker-compose.yaml
+++ b/Anabasis.EntityFramework.Tests.Integration/docker-compose.yaml
@@ -1,14 +1,10 @@
 version: '2'
 
 services:
-    web:
-        build: .
-        ports:
-            - "8000:80"
-        depends_on:
-            - db
-    db:
+    sqlserver:
         image: "mcr.microsoft.com/mssql/server"
         environment:
             SA_PASSWORD: "Your_password123"
             ACCEPT_EULA: "Y"
+        ports:
+          - "5434:1433"
