--- a/Anabasis.EntityFramework/Anabasis.EntityFramework.csproj
+++ b/Anabasis.EntityFramework/Anabasis.EntityFramework.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
   </ItemGroup>
 
