--- a/Anabasis.Deployment/Anabasis.Deployment.csproj
+++ b/Anabasis.Deployment/Anabasis.Deployment.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Nuke.Common" Version="6.0.1" />
+    <PackageReference Include="KubernetesClient" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
