--- a/Anabasis.Deployment.Test.App/kustomize/base/prod/api/config.app.yaml
+++ b/Anabasis.Deployment.Test.App/kustomize/base/prod/api/config.app.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 data:
-  config.app.yaml: unknown-config-app-yaml
+  config.app.yaml: data
 kind: ConfigMap
 metadata:
   labels:
-    app: unknown-name
-    release: 
-    group: test-group
-  name: config.app.Anabasis-Deployment-Test-App
-  namespace: test-group
+    app: anabasis-deployment-test-app
+    release: 1.0.67
+    group: anabasis-test-group
+  name: config.app
+  namespace: anabasis-test-group
