--- a/Anabasis.Deployment.Test.App/kustomize/base/prod/api/service.yaml
+++ b/Anabasis.Deployment.Test.App/kustomize/base/prod/api/service.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: Anabasis-Deployment-Test-App
-    release: 
-    group: test-group
-  name: svc-test-group
-  namespace: test-group
+    app: anabasis-deployment-test-app
+    release: 1.0.67
+    group: anabasis-test-group
+  name: svc-anabasis-test-group
+  namespace: anabasis-test-group
 spec:
   ports:
   - name: http
@@ -18,6 +18,6 @@ spec:
     protocol: TCP
     targetPort: 1337
   selector:
-    app: Anabasis-Deployment-Test-App
-    release: 
+    app: anabasis-deployment-test-app
+    release: 1.0.67
   type: ClusterIP
