--- a/Anabasis.Deployment.Test.App/kustomize/base/prod/namespace/namespace.yaml
+++ b/Anabasis.Deployment.Test.App/kustomize/base/prod/namespace/namespace.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    group: test-group
-  name: test-group
+    group: anabasis-test-group
+  name: anabasis-test-group
