--- a/Anabasis.Deployment.Test.App/kustomize/prod/deployment.yaml
+++ b/Anabasis.Deployment.Test.App/kustomize/prod/deployment.yaml
@@ -25,7 +25,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: https://hub.docker.com/anabasis-deployment-test-app/NO_GIT_REPOS_DETECTED:1.0.67
+        image: busybox:1.28
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
@@ -49,19 +49,5 @@ spec:
           initialDelaySeconds: 30
           periodSeconds: 20
           timeoutSeconds: 15
-        volumeMounts:
-        - mountPath: /app/config.group.yaml
-          name: config-group
-          subPath: config.group.yaml
-        - mountPath: /app/config.app.yaml
-          name: config-app
-          subPath: config.app.yaml
       imagePullSecrets:
       - name: registrysecret
-      volumes:
-      - configMap:
-          name: config-group-anabasis-test-group
-        name: config-group
-      - configMap:
-          name: config-app-anabasis-deployment-test-app
-        name: config-app
